<resources>
    <string name="app_name">EDEN NFC Tracker</string>

    <!--  General Strings -->
    <string name="disconnected">Disconnected</string>
    <string name="off">Off</string>
    <string name="on">On</string>
    <string name="not_set">Not set</string>


    <!--  Welcome Page Strings -->
    <string name="welcome_tagline">A better way to track your things.</string>
    <string name="welcome_setup">This device is a:</string>
    <string name="title_activity_hub">HubActivity</string>
    <string name="title_hub_action_readers">Readers</string>
    <string name="title_hub_action_enclosures">Enclosures</string>
    <string name="title_hub_action_categories">Categories</string>

    <!-- Reader Page Strings -->
    <string name="reader_title_status">Reader Status</string>
    <string name="reader_text_settings">Settings</string>
    <string name="reader_text_status">Status</string>

    <string name="reader_settings_wifi">Wi-Fi</string>

    <string name="reader_settings_hub">Hub</string>
    <string name="reader_settings_hub_connected">Connected to hub</string>
    <string name="reader_settings_hub_available">Available Hubs</string>
    <string name="reader_settings_fixed_hub">Connect to fixed hub</string>

    <string name="reader_settings_discoverable">Discoverable</string>
    <string name="reader_settings_discoverable_name">Reader Name</string>
    <string name="reader_settings_discoverable_check_summary">Make your device discoverable</string>
    <string name="reader_settings_discoverable_check_title">Discoverable</string>


    <string name="reader_status_all_good">Everything is working properly</string>
    <string name="reader_status_no_nfc">This device doesn\'t support NFC.</string>
    <string name="reader_status_nfc_not_enabled">NFC is not enabled.</string>
    <string name="reader_status_nfc_text">Last seen NFC Tag:</string>
    <string name="reader_status_not_seen">No NFC tag until now</string>

    <!-- Hub Page Strings -->
    <string name="hub_title_status">Hub Status</string>
    <string name="hub_text_settings">Settings</string>
    <string name="hub_text_status">Status</string>

    <string name="hub_settings_discoverable">Discoverable</string>
    <string name="hub_settings_discoverable_name">Hub Name</string>
    <string name="hub_settings_discoverable_check_summary">Make your hub discoverable</string>
    <string name="hub_settings_discoverable_check_title">Discoverable</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>
