<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <Preference
        android:key="reader_settings_wifi_key"
        android:title="@string/reader_settings_wifi"
        android:summary="@string/disconnected">

        <intent android:action="android.settings.WIFI_SETTINGS"/>
    </Preference>

    <PreferenceScreen
        android:title="@string/reader_settings_hub"
        android:summary="@string/disconnected">

        <EditTextPreference
            android:key="reader_settings_fixed_hub"
            android:title="@string/reader_settings_fixed_hub"/>

        <PreferenceCategory
            android:key="reader_settings_hub_connected"
            android:title="@string/reader_settings_hub_connected"/>

        <PreferenceCategory
            android:key="reader_settings_hub_available"
            android:title="@string/reader_settings_hub_available"/>

    </PreferenceScreen>

    <PreferenceScreen
        android:key="reader_settings_discoverable_key"
        android:title="@string/reader_settings_discoverable"
        android:summary="@string/off">

        <EditTextPreference
            android:persistent="true"
            android:key="reader_settings_discoverable_name_key"
            android:title="@string/reader_settings_discoverable_name"
            android:summary="@string/not_set"/>

        <SwitchPreference
            android:persistent="true"
            android:key="reader_settings_discoverable_check_key"
            android:title="@string/reader_settings_discoverable_check_title"
            android:summary="@string/reader_settings_discoverable_check_summary"
            android:defaultValue="false" />

    </PreferenceScreen>



</PreferenceScreen>