<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.eden.apps.nfctracker.ReaderStatusFragment">

    <LinearLayout
        android:weightSum="1"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <View
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.025"/>

        <LinearLayout
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:weightSum="1"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/reader_status_image"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_ok" />

            <View
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="0.05"/>

            <TextView
                android:text="@string/reader_status_all_good"
                android:id="@+id/reader_status_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.025"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@android:color/darker_gray"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.025"/>

        <TextView
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:text="@string/reader_status_nfc_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <View
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.025"/>

        <TextView
            android:id="@+id/reader_status_nfc"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:text="@string/reader_status_not_seen"
            android:textSize="12sp" />

    </LinearLayout>

</FrameLayout>
