<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.eden.apps.nfctracker.MainActivity">

    <LinearLayout
        android:weightSum="1"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <View
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.2"/>

        <ImageView
            android:id="@+id/welcome_logo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:srcCompat="@mipmap/ic_launcher" />

        <View
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.05"/>

        <TextView
            android:id="@+id/welcome_app_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="monospace"
            android:text="@string/app_name"
            android:textAlignment="center"
            android:textColor="@color/primaryDarkColor"
            android:textSize="32sp" />

        <View
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.05"/>

        <TextView
            android:id="@+id/welcome_tagline"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/welcome_tagline"
            android:textAlignment="center" />


        <View
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.4"/>

        <TextView
            android:id="@+id/welcome_setup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/welcome_setup"
            android:textAlignment="center"
            android:textSize="24sp" />

        <View
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.1"/>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">


            <Button
                android:layout_toLeftOf="@+id/welcome_pad_center"
                android:id="@+id/welcome_setup_hup"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/round_button"
                android:text="Hub"
                android:textColor="@color/primaryTextColor" />

            <View
                android:id="@+id/welcome_pad_center"
                android:layout_centerInParent="true"
                android:layout_width="100dp"
                android:layout_height="100dp" />

            <Button
                android:layout_toRightOf="@+id/welcome_pad_center"
                android:id="@+id/welcome_setup_reader"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/round_button"
                android:text="Reader"
                android:textColor="@color/primaryTextColor" />


        </RelativeLayout>

    </LinearLayout>

</android.support.constraint.ConstraintLayout>
